--- a/src/quasar-variables.scss
+++ b/src/quasar-variables.scss
@@ -1,11 +1,11 @@
-$primary   : #5745C5;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary: $primary;
+$secondary: $secondary;
+$accent: $accent;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark: $dark;
+$dark-page: $darkPage;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037; 
+$positive: $positive;
+$negative: $negative;
+$info: $info;
+$warning: $warning;
